--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link href="gd/linguist/logo/logo.svg" rel="icon" />
-		<title>Hyper Linguist</title>
-		<meta name="title" content="Hyper Translator" />
+		<title>Giper Linguist</title>
+		<meta name="title" content="Giper Translator" />
 		<meta name="description" content="User-friendly bi-panel lightweight ad-free online translation service"/>
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://linguist.giper.dev/" />
