--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link href="gd/lingua/logo/logo.svg" rel="icon" />
-		<title>Giper Linguist</title>
+		<title>Giper Lingua</title>
 		<meta name="title" content="Giper Translator" />
 		<meta name="description" content="User-friendly bi-panel lightweight ad-free online translation service"/>
 		<meta property="og:type" content="website" />
